--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,10 +1,11 @@
-footer{
-    background-color: #fff;
-    height: 60px;
-    width: 100%;
+footer {
     position: fixed;
-    border-top: 1px solid #CCCCCC;
     bottom: 0;
-    text-align: center;
+    width: 100%;
+    background-color: white;
+    height: 60px;
+    border-top: 1px solid #CCCCCC;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
