--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,24 +1,26 @@
-.filters{
-    background-color: #fff;
+.filters {
+    background-color: white;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 }
-.filters button{
+
+section.filters button{
     font-size: 18px;
+    color: white;
     background-color: #FF5A5F;
-    color: #fff;
     height: 48px;
-    width: 20%;
-    border: 0;
-    margin-right: 30px;
+    border: 0px;
     border-radius: 4px;
-    margin-top: 12px;
+    width: 20%;
+    margin-right: 30px;
+    opacity: 1;
 }
-/*
-.filters button:hover{
+
+section.filters button:hover {
     opacity: 0.9;
-}*/
+}
