--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,46 +1,49 @@
-.filters{
-    background-color: #fff;
+.filters {
+    background-color: white;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     display: flex;
     justify-content: flex-start;
+    align-items: center;
 }
-.filters button{
+
+section.filters button{
     font-size: 18px;
+    color: white;
     background-color: #FF5A5F;
-    color: #fff;
     height: 48px;
-    width: 20%;
-    border: 0;
+    border: 0px;
     border-radius: 4px;
-    margin: 11px 30px;
+    width: 20%;
     margin-left: auto;
+    margin-right: 30px;
+    opacity: 1;
 }
-.locations, .amenities{
+
+section.filters button:hover {
+    opacity: 0.9;
+}
+
+.locations, .amenities {
     height: 100%;
     width: 25%;
     padding-left: 50px;
 }
-.locations{
+
+.locations {
     border-right: 1px solid #DDDDDD;
 }
 
-.locations h3, .amenities h3{
+.locations h3, .amenities h3 {
     font-weight: 600;
-    font-size: 16px;
-    text-align: left;
-    margin-top: 20px;
-    margin-bottom: 0px;
+    margin: 12px 0 5px 0;
 }
-.locations h4, .amenities h4{
+
+.locations h4, .amenities h4 {
     font-weight: 400;
     font-size: 14px;
-    text-align: left;
-    margin-top: 5px;
-}
-.filters button:hover{
-    opacity: 0.9;
+    margin: 0 0 0 0;
 }
 
