--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,67 +1,107 @@
-.places{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-}
-.places h1{
-    text-align: left;
-    font-size: 30px;
+.places {
     width: 100%;
-}
-.places article{
-    border: 1px solid #FF5A5F;
-    padding: 20px;
-    width: 390px;
-    margin: 20px;
-    border-radius: 4px;
-}
-.places article h2{
-    font-size: 30px;
-    text-align: center;
-    margin-bottom: 30px;
-}
-.information{
-    height: 80px;
-    border-bottom: 1px solid #DDDDDD;
-    border-top: 1px solid #DDDDDD;
-    margin-bottom: 16px;
-    margin-left: 15px;
+    border: 0;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
-}
-.max_guest, .number_rooms, .number_bathrooms{
-    width:100px;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: 50% 5px;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-}
-.max_guest{
-    background-image: url(../images/icon_group.png);
-}
-.number_rooms{
-    background-image: url(../images/icon_bed.png);
-}
-.number_bathrooms{
-    background-image: url(../images/icon_bath.png);
-}
-.user, .description{
-    text-align:left;
-    margin-top: 12px;
-    margin-bottom: 12px;
 }
 
-.price_by_night{
+.places > h1 {
+    font-size: 30px;
+    padding-left: 20px;
+    padding-top: 20px;
+    margin-bottom: 0px;
+    flex: 0 1 100%;
+}
+.places > article {
+    width: 390px;
+    padding: 20px 20px 20px 20px;
+    margin: 20px 20px 20px 20px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    position: relative;
+}
+
+.places > article > h2 {
+    font-size: 30px;
+    margin: 0 0 0 0;
+    align-self: center;
+}
+
+.price_by_night {
     color: #FF5A5F;
-    border: 4px solid #FF5a5F;
-    border-radius: 50%;
+    border: 4px solid #FF5A5F;
     min-width: 60px;
     height: 60px;
     font-size: 30px;
-    float: right;
-    position: relative;
-    line-height: 70px;
-    top: -87px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+}
+.price_by_night > p {
+    margin: 0 0 0 0;
+}
+
+.information {
+    align-self: center;
+    height: 80px;
+    width: 100%;
+    border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.max_guest, .number_rooms, .number_bathrooms {
+    width: 100px;
+    text-align: center;
+}
+
+.max_guest > p, .number_rooms > p, .number_bathrooms > p{
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.guest_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url("../images/icon_group.png") no-repeat center;
+}
+
+.bed_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url("../images/icon_bed.png") no-repeat center;
+}
+
+.bath_image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 50px;
+    width: 50px;
+    background: url("../images/icon_bath.png") no-repeat center;
+}
+
+.user > p {
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+.description > p {
+    margin-top: 7px;
+    margin-bottom: 0px;
 }
